# airbrowser-mcp

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LICENSE  README.md  SECURITY.md  compose.local.yml  compose.test.yml  compose.yml  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  setup.py
.github/workflows/: ci.yml  pages.yml  release-please.yml  release.yml
docker/: entrypoint.sh  nginx.conf.template  supervisord.conf  supervisord.dev.conf  test-entrypoint.sh
docs/: ENV_VARIABLES.md  MCP_INTEGRATION.md  PUBLISHING.md  TESTING.md
examples/: README.md  basic_navigation.py  cloudflare_captcha_vision.py  form_automation.py  mcp_agent_example.py  parallel_browsers.py  proxy_rotation.py  what_is_visible.py
generated-clients/python/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
generated-clients/typescript/: README.md  api.ts  base.ts  common.ts  (+4 more)
landing/: index.html  og-image.html
portable/: README.md  build-release.sh
scripts/: check_generated_clients.sh  generate_client.sh  generate_docs.py  generate_docs.sh  lint.sh  publish_clients.sh  publish_npm.sh  publish_python.sh  run_tests.sh  test_session_restore.sh
tests/: conftest.py  test_all_endpoints.py  test_browser_status.py  test_cdp_proxy.py  test_chatgpt_api.py  test_cookies.py  test_coordinates.py  test_easyjet_api.py  test_example_files.py  test_generated_client_complete.py  test_gui_operations.py  test_kill_restore.py  test_multi_uc_api.py  test_network_logs.py  test_new_endpoints.py  test_profiles.py  test_selectors.py  test_session_restore.py  test_tabs.py  test_verify_undetected_api.py  test_vision_and_scroll.py
(+258 files in other folders)
