[project]
name = "airbrowser-mcp"
version = "1.2.1"
description = "AI Remote Browser - Undetectable Chrome runtime for AI agents with REST API and MCP"
requires-python = ">=3.10"

[tool.ruff]
# Target Python 3.10+
target-version = "py310"

# Line length to match common standards
line-length = 120

# Exclude generated and third-party code
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "generated-clients",
    "third_party",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",   # line too long (handled by formatter)
    "E722",   # bare except (common in cleanup code)
    "E402",   # module level import not at top of file (sometimes necessary)
    "B008",   # function call in default argument (common in Flask)
    "B904",   # raise without from (too noisy)
    "SIM105", # contextlib.suppress (try-except-pass is often clearer)
    "SIM108", # ternary operator (readability preference)
    "SIM115", # context manager for open() (not always applicable)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["airbrowser"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Unix-style line endings
line-ending = "lf"
